# tenstorrent-tiny-examples

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  blas_op.h  buffer.cpp  buffer.h  conv.cpp  conv.h  input_parser.cpp  input_parser.h  log.h  main.cpp  matmul_cpu.cpp  matmul_cpu.h  multicast_advanced.cpp  multicast_matmul.cpp  multicast_matmul.h  simple_multicast.cpp  single_tile_loopback.cpp  single_tile_loopback_four_cores.cpp  single_tile_loopback_four_cores.h  single_tile_matmul.cpp  single_tile_matmul.h  utils.cpp  utils.h
src/1_single_tile_loopback/: single_tile_loopback.cpp  single_tile_loopback.h
src/2_single_tile_loopback_four_cores/: single_tile_loopback_four_cores.cpp
src/3_simple_multicast/: simple_multicast.cpp  simple_multicast.h
src/3_simple_multicast/kernels/: simple_multicast_sender_reader.cpp
src/4_single_tile_matmul/: single_tile_matmul.cpp
src/5_multicast_advanced/: multicast_advanced.cpp  multicast_advanced.h
src/5_multicast_advanced/kernels/: multicast_advanced.cpp
src/kernels/: multicast_advanced.cpp  multicast_matmul.cpp  multicast_matmul_reader.cpp  multicast_matmul_writer.cpp  simple_multicast.cpp  simple_multicast_receiver.cpp  simple_multicast_receiver_reader.cpp  simple_multicast_sender.cpp  simple_multicast_sender_reader.cpp  simple_multicast_writer.cpp  single_tile_loopback.cpp  single_tile_loopback_four_cores.cpp  single_tile_matmul.cpp  single_tile_matmul_reader.cpp  single_tile_matmul_writer.cpp
ttnn/: test_conv2d.py
